--- a/Style.css
+++ b/Style.css
@@ -105,7 +105,7 @@ a:hover {
 }
 #paragraph{
   display:flex;
-  background-image: linear-gradient(180.43deg, rgba(0,0,0,0.60) 0%, rgba(0,0,0,0.80) 100%), url("images/code-backdrop.jpg");
+  background-image: linear-gradient(180.43deg, rgba(0,0,0,0.60) 0%, rgba(0,0,0,0.80) 100%), url("/images/code-backdrop.jpg");
   width: 500px;
   height: 500px;
   color: transparent;
