--- a/Style.css
+++ b/Style.css
@@ -1,28 +1,27 @@
-*{
-  padding:0;
+* {
+  padding: 0;
   margin: 0;
   box-sizing: border-box;
-  }
+}
 
-body{
+body {
   background-color: #24272e;
 }
 
 .toolbar {
-  font-family: 'Times New Roman', Times, serif;
+  font-family: "Times New Roman", Times, serif;
   font-size: 30px;
   color: black;
   text-align: center;
   background: white;
   border-color: black;
-  
 }
 
 .toolbar ul {
   align-items: center;
   list-style-type: none;
   margin: 0;
-  padding-left: 65%;
+  padding-left: 60%;
   overflow: hidden;
 }
 
@@ -42,18 +41,17 @@ body{
   background-color: rgb(112, 104, 104);
   color: silver;
 }
-.toolbar #Contact-title{
+.toolbar #Contact-title {
   text-align: left;
   margin-bottom: 30px;
   font-size: 40px;
 }
 
-.toolbar button{
-
+.toolbar button {
   color: #212529;
   background-color: #24272e;
   border-color: black;
-  padding: .5rem 2rem;
+  padding: 0.5rem 2rem;
   font-size: 20px;
   line-height: 2;
   border-radius: 40px;
@@ -69,81 +67,87 @@ a {
 }
 
 a:hover {
-  color:white; 
-  text-decoration:none; 
-  cursor:pointer;  
+  color: white;
+  text-decoration: none;
+  cursor: pointer;
 }
 
-
-.about-me{
+.about-me {
   border: red;
   border-radius: 90px;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: "Times New Roman", Times, serif;
   font-size: 30px;
   color: black;
   text-align: center;
   margin-top: 50px;
 }
 
-.about-me img{
- 
+.about-me img {
   float: left;
   margin-left: 150px;
   margin-right: 150px;
-  
 }
-.about-me h1{
+.about-me h1 {
   color: silver;
-  display: block; 
+  display: block;
 }
-.about-me h2{
+.about-me h2 {
   color: silver;
 }
 
-.about-me p{
+.about-me p {
   color: white;
 }
-#paragraph{
-  display:flex;
-  background-image: linear-gradient(180.43deg, rgba(0,0,0,0.60) 0%, rgba(0,0,0,0.80) 100%), url("/images/code-backdrop.jpg");
+#paragraph {
+  display: flex;
+  background-image: linear-gradient(
+      180.43deg,
+      rgba(0, 0, 0, 0.6) 0%,
+      rgba(0, 0, 0, 0.8) 100%
+    ),
+    url("/images/code-backdrop.jpg");
   width: 500px;
   height: 500px;
   color: transparent;
   border: 4px solid black;
 }
-#paragraph p{
+#paragraph p {
   display: none;
 }
 
-#paragraph h1{
- position:absolute;
- top: 60%;
- left: 50%;
- transform: translatex(55%);
+#paragraph h1 {
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translatex(55%);
 }
-#paragraph:hover{
-  background-image: linear-gradient(180.43deg, rgba(0,0,0,0.60) 0%, rgba(0,0,0,0.80) 100%), url("/images/code-backdrop.jpg");
-  color:white;
+#paragraph:hover {
+  background-image: linear-gradient(
+      180.43deg,
+      rgba(0, 0, 0, 0.6) 0%,
+      rgba(0, 0, 0, 0.8) 100%
+    ),
+    url("/images/code-backdrop.jpg");
+  color: white;
   opacity: 0.5;
   padding: 50px;
   width: 500px;
   height: 500px;
 }
 
-#paragraph:hover h1{
+#paragraph:hover h1 {
   display: none;
 }
 
-#about-me:hover .who-am-i{
-display: inline;
+#about-me:hover .who-am-i {
+  display: inline;
 }
 
-
-.skills h1{
+.skills h1 {
   margin: 50px;
 }
 
-.skills li{
+.skills li {
   margin: 10px;
   color: white;
   margin-bottom: 40px;
